2022-09-08  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xtime.py:

	  - Added convenience wrapper functions for taking and comparing time
	    points:

	      - xtime.tp_now(): retuns a time point with ms resolution
	      - xtime.tp_diff(): returns difference in ms between two time
	        points.

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Use new xtime time point functions.


2022-09-07  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xtime.py:

	  - Some micropython ports have a fake time.localtime() function that
	    just calls time.gmtime(), some don't. Apply our own TZ data offset
	    implementation only on those that don't.


2022-09-07  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Now uses time.ticks_*() functions instead of time.time_ns()
	    because on some ports (rp2 in particular), time.time_ns()
	    is rounded off to the nearest second.


2022-09-07  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xtime.py:

	  - Time operations on rp2 platforms are now offset correctly to
	    embedded epoch (2000/01/01).

	  - New module constant: EPOCH_OFFSET.

	  - Tidy up to ensure everything works on ports that use unix
	    epoch and on ports that use embedded epoch.


2022-09-06  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Webserver text is now defined by the WEBSRV_TEMPLATE config param.

	    Template variables:

	    - %TS%: seconds since epoch, XXXXXXXXXX
	    - %Sn_HUMI%: sensor n humidity, XXX.XXX
	    - %Sn_TEMP%: sensor n temperature, +XX.XXX
	    - %Sn_PRES%: sensor n pressure, XXXX.XXX

	* conf/clock_sensor/clock_sensor_esp32.conf:
	* conf/clock_sensor/clock_sensor_esp8266.conf:
	* conf/clock_sensor/clock_sensor_picow.conf:

	  - Added: WEBSRV_TEMPLATE


2022-09-06  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:
